# pyquran-modern

./: README.md  pyproject.toml
pyquran_modern/: .gitignore  __init__.py  core.py
pyquran_modern.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
