[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyquran-modern"
version = "0.1.0"
description = "Python 3.13 compatible wrapper for pyquran"
readme = "README.md"
authors = [ { name = "mmzerda" } ]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = ["pyquran"]

